Исправления по критериям

--- a/catalog.html
+++ b/catalog.html
@@ -45,20 +45,18 @@
                 margin-left: 0%">
               </div>
             </div>
-            <div class="toggle toggle-min" tabindex="0" style="
-            left: 7%">
+            <div class="toggle toggle-min" tabindex="0">
           </div>
-          <div class="toggle toggle-max" tabindex="0" style="
-          left: 62%">
+          <div class="toggle toggle-max" tabindex="0">
         </div>
       </div>
 
       <div class="price-controls">
         <label class="min-price">
-          от <input type="number" name="min-price" value="0">
+          от <input type="text" name="min-price" value="0">
         </label>
         <label class="max-price">
-          до <input type="number" name="max-price" value="15000">
+          до <input type="text" name="max-price" value="15 000">
         </label>
       </div>
     </div>
@@ -151,7 +149,7 @@
       </div>
       <img class="template-picture" src="img/img-sedona.jpg" width="358" height="578" alt="Главная страница сайта, фото достопримечательностей города и обзор преимуществ для туризма">
       <div class="template-popup">
-        <a class="template-price-title" href="#">Sedona</a>
+        <a class="template-price-title" href="sedona.html">Sedona</a>
         <p class="template-price-text-sedona">Информационный сайт для туристов</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
@@ -166,7 +164,7 @@
       </div>
       <img class="template-picture" src="img/img-pink.jpg" width="358" height="578" alt="Главная страница сайта, предложение скачать приложение, изображение с телефоном в руке, экран телефона с ярко-розовым фильтром">
       <div class="template-popup">
-        <a class="template-price-title" href="#">Pink App</a>
+        <a class="template-price-title" href="pink.html">Pink App</a>
         <p class="template-price-text">Продуктовый лендинг <br> приложения для iOS и Android</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
@@ -181,7 +179,7 @@
       </div>
       <img class="template-picture" src="img/img-barbershop.jpg" width="358" height="578" alt="Главная страница сайта, тёмный фон с рабочим местом барбера, указание статистики и преимуществ салона">
       <div class="template-popup">
-        <a class="template-price-title" href="#">Barbershop</a>
+        <a class="template-price-title" href="barbershop.html">Barbershop</a>
         <p class="template-price-text">Сайт салона красоты.<br>  Для мужчин, да.</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
@@ -196,7 +194,7 @@
       </div>
       <img class="template-picture" src="img/img-mishka.jpg" width="358" height="578" alt="Главная страница сайта, фотографии вязаных изделий с указанием параметров и цены, информация о преимуществах магазина">
       <div class="template-popup">
-        <a class="template-price-title" href="#">MISHKA</a>
+        <a class="template-price-title" href="mishka.html">MISHKA</a>
         <p class="template-price-text">Интернет магазин <br> вязаных игрушек</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
@@ -211,7 +209,7 @@
       </div>
       <img class="template-picture" src="img/img-aplus.jpg" width="358" height="578" alt="Главная страница сайта, на сиреневом фоне изображены дисковый телефон, планшет и рука с канцелярскими предметами, указание формы обучения и преимуществ курсов">
       <div class="template-popup">
-        <a class="template-price-title" href="#">A Plus</a>
+        <a class="template-price-title" href="aplus.html">A Plus</a>
         <p class="template-price-text">Лендинг курсов повышения<br> квалификации</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
@@ -226,7 +224,7 @@
       </div>
       <img class="template-picture" src="img/img-kvast.jpg" width="358" height="578" alt="Главная страница сайта, фоновое изображение с колосьями ржи, фотографии стеклянных бутылок кваса с описанием разновидностей">
       <div class="template-popup">
-        <a class="template-price-title" href="#">КВАСТ</a>
+        <a class="template-price-title" href="kvast.html">КВАСТ</a>
         <p class="template-price-text">Промо-сайт производителя<br>  крафтового кваса</p>
         <a class="button template-price-button" href="#">9 900 ₽</a>
       </div>
