completes the project

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
   </section>
 
   <!-- JavaScript -->
-  <script src="js/script.min.js"></script>
+  <script src="js/script.js"></script>
 
 </body>
 </html>
