--- a/catalog.html
+++ b/catalog.html
@@ -347,7 +347,7 @@
 </section>
 
 <!-- JavaScript -->
-<script src="js/script.min.js"></script>
+<script src="js/script.js"></script>
 
 </body>
 </html>
